--- a/src/components/pdf/style.css
+++ b/src/components/pdf/style.css
@@ -1,1 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap');
+@font-face {
+    font-family: Kaushan Script;
+    src: url('../../fonts/kaushan-script/KaushanScript-Regular.otf');
+}
